--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'maven'
 
+import org.ajoberstar.gradle.git.tasks.*
+
 sourceCompatibility = 1.6
 version = '1.0'
 jar {
@@ -26,12 +28,34 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.+'
 }
 
+
+jar {
+    from configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+}
+
+task copyToLib(type: Copy) {
+  into "$buildDir/output/lib"
+  from configurations.runtime
+}
+
 uploadArchives {
     repositories {
         mavenDeployer {
-            repository(url: "file://localhost/home/mih/temp/ftp/maven2/")
+//            repository(url: "file://localhost/home/mih/temp/ftp/maven2/")
+            repository(url: "./bbuild/repository/")
             pom.groupId = 'edu.kpi.fbp'
         }
     }
 }
 
+task repoAdd(dependsOn: uploadArchives, type: GitAdd) {
+  repoPath = "./build/repository/"
+  setIgnoreUntracked(false)
+}
+
+task repoCommit(dependsOn: repoAdd, type: GitCommit) {
+  repoPath = "./build/repository/"
+  message = "Test commit from Gradle plugin"
+  setCommitAll(true)
+  commit()
+}
