--- a/build.gradle
+++ b/build.gradle
@@ -1,36 +1,59 @@
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'maven'
+//apply plugin: 'executable-jar'
 
 import org.ajoberstar.gradle.git.tasks.*
 
 sourceCompatibility = 1.6
 version = '1.0'
+
+task prin {
+  println configurations.compile
+}
+
 jar {
-    manifest {
-        attributes 'Implementation-Title': 'CoreFBP utils', 'Implementation-Version': version
-    }
+  from {
+    configurations.compile.collect {
+      it.isDirectory() ? it : zipTree(it)
+    } 
+  }
+  
+  manifest {
+    attributes(
+      'Implementation-Title': 'CoreFBP utils',
+      'Implementation-Version': version,
+      'Main-Class': 'edu.kpi.fbp.Start'
+    )
+  }
 }
 
 buildscript {
-  repositories { mavenCentral() }
-  dependencies { classpath 'org.ajoberstar:gradle-git:0.3.0' }
+  repositories {
+    mavenCentral()
+  }
+
+  dependencies {
+    classpath 'org.ajoberstar:gradle-git:0.3.0'
+//    classpath 'net.nisgits.gradle:gradle-executable-jar-plugin:master-REL-6'
+  }
 }
 
 repositories {
-    mavenCentral()
-    mavenRepo url: "https://raw.github.com/lampapos/FBPRepo/master/repo"
+  mavenCentral()
+  mavenRepo url: "https://raw.github.com/lampapos/FBPRepo/master"
 }
 
 dependencies {
-    compile 'edu.kpi.fbp:JavaFBP:1.0'
-    compile 'com.thoughtworks.xstream:xstream:1.4.2'
-    testCompile group: 'junit', name: 'junit', version: '4.+'
+  compile 'edu.kpi.fbp:JavaFBP:1.0'
+  compile 'edu.kpi.fbp:FBPComponentLib:1.0'
+  compile 'com.thoughtworks.xstream:xstream:1.4.2'
+  testCompile group: 'junit', name: 'junit', version: '4.+'
 }
 
 
 jar {
-    from configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+  from configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
 }
 
 task copyToLib(type: Copy) {
@@ -39,23 +62,23 @@ task copyToLib(type: Copy) {
 }
 
 uploadArchives {
-    repositories {
-        mavenDeployer {
-//            repository(url: "file://localhost/home/mih/temp/ftp/maven2/")
-            repository(url: "./bbuild/repository/")
-            pom.groupId = 'edu.kpi.fbp'
-        }
+  repositories {
+    mavenDeployer {
+      //            repository(url: "file://localhost/home/mih/temp/ftp/maven2/")
+      repository(url: "./bbuild/repository/")
+      pom.groupId = 'edu.kpi.fbp'
     }
+  }
 }
 
-task repoAdd(dependsOn: uploadArchives, type: GitAdd) {
-  repoPath = "./build/repository/"
-  setIgnoreUntracked(false)
-}
-
-task repoCommit(dependsOn: repoAdd, type: GitCommit) {
-  repoPath = "./build/repository/"
-  message = "Test commit from Gradle plugin"
-  setCommitAll(true)
-  commit()
-}
+//task repoAdd(dependsOn: uploadArchives, type: GitAdd) {
+//  repoPath = "./build/repository/"
+//  setIgnoreUntracked(false)
+//}
+//
+//task repoCommit(dependsOn: repoAdd, type: GitCommit) {
+//  repoPath = "./build/repository/"
+//  message = "Test commit from Gradle plugin"
+//  setCommitAll(true)
+//  commit()
+//}
