--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,6 @@
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'maven'
-//apply plugin: 'executable-jar'
 apply plugin: 'application'
 
 def toolingApiVersion = gradle.gradleVersion
@@ -55,8 +54,8 @@ dependencies {
   compile 'edu.kpi.fbp:FBPComponentLib:1.0'
   compile 'com.thoughtworks.xstream:xstream:1.4.2'
   compile "org.gradle:gradle-tooling-api:${toolingApiVersion}"
-  // Need an SLF4J implementation at runtime
-  runtime 'org.slf4j:slf4j-simple:1.6.6'
+  compile 'org.slf4j:slf4j-simple:1.7.2'
+  runtime 'org.slf4j:slf4j-api:1.7.2'
   testCompile group: 'junit', name: 'junit', version: '4.+'
 }
 
