--- a/build.gradle
+++ b/build.gradle
@@ -8,36 +8,19 @@ def toolingApiVersion = gradle.gradleVersion
 import org.ajoberstar.gradle.git.tasks.*
 
 sourceCompatibility = 1.6
-version = '1.0'
+version = '1.1'
 
 task prin {
   println configurations.compile
 }
 
 jar {
-  from {
-    configurations.compile.collect {
-      it.isDirectory() ? it : zipTree(it)
-    } 
-  }
-  
   manifest {
     attributes(
       'Implementation-Title': 'CoreFBP utils',
       'Implementation-Version': version,
       'Main-Class': 'edu.kpi.fbp.Start'
     )
-  }
-}
-
-buildscript {
-  repositories {
-    mavenCentral()
-  }
-
-  dependencies {
-    classpath 'org.ajoberstar:gradle-git:0.3.0'
-//    classpath 'net.nisgits.gradle:gradle-executable-jar-plugin:master-REL-6'
   }
 }
 
@@ -51,17 +34,11 @@ repositories {
 
 dependencies {
   compile 'edu.kpi.fbp:JavaFBP:1.0'
-  compile 'edu.kpi.fbp:FBPComponentLib:1.0'
   compile 'com.thoughtworks.xstream:xstream:1.4.2'
   compile "org.gradle:gradle-tooling-api:${toolingApiVersion}"
   compile 'org.slf4j:slf4j-simple:1.7.2'
   runtime 'org.slf4j:slf4j-api:1.7.2'
   testCompile group: 'junit', name: 'junit', version: '4.+'
-}
-
-
-jar {
-  from configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
 }
 
 task copyToLib(type: Copy) {
@@ -72,21 +49,9 @@ task copyToLib(type: Copy) {
 uploadArchives {
   repositories {
     mavenDeployer {
-      //            repository(url: "file://localhost/home/mih/temp/ftp/maven2/")
-      repository(url: "./bbuild/repository/")
+      repository(url: "file:///windows/docs/prog/diploma/FBPRepo")
+//      repository(url: "./bbuild/repository/")
       pom.groupId = 'edu.kpi.fbp'
     }
   }
 }
-
-//task repoAdd(dependsOn: uploadArchives, type: GitAdd) {
-//  repoPath = "./build/repository/"
-//  setIgnoreUntracked(false)
-//}
-//
-//task repoCommit(dependsOn: repoAdd, type: GitCommit) {
-//  repoPath = "./build/repository/"
-//  message = "Test commit from Gradle plugin"
-//  setCommitAll(true)
-//  commit()
-//}
