--- a/src/main/resources/build.gradle.template
+++ b/src/main/resources/build.gradle.template
@@ -9,12 +9,12 @@ jar {
   from {
     configurations.compile.collect {
       it.isDirectory() ? it : zipTree(it)
-    } 
+   } 
   }
   
   manifest {
     attributes(
-      'Implementation-Title': 'CoreFBP utils',
+      'Implementation-Title': 'FBP network',
       'Implementation-Version': version,
       'Main-Class': 'edu.kpi.fbp.Start'
     )
@@ -24,17 +24,12 @@ jar {
 repositories {
   mavenCentral()
   mavenRepo url: "https://raw.github.com/lampapos/FBPRepo/master"
+  
 }
 
 dependencies {
   compile 'edu.kpi.fbp:JavaFBP:1.0'
-  compile 'edu.kpi.fbp:FBPComponentLib:1.0'
-  compile 'com.thoughtworks.xstream:xstream:1.4.2'
-  compile group: 'edu.kpi.fbp', name: 'FBPCore', version: '1.0'
-  testCompile group: 'junit', name: 'junit', version: '4.+'
-}
-
-
-jar {
-  from configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+  //compile 'edu.kpi.fbp:FBPCore:1.0'
+  compile files('/windows/docs/prog/workspaces/magister_diploma_ws/FBPCore/build/libs/FBPCore-1.0.jar')
+  compile files('/windows/docs/prog/workspaces/magister_diploma_ws/FBPComponentLib/build/libs/FBPComponentLib-1.0.jar')
 }
