--- a/src/main/resources/start.java.template
+++ b/src/main/resources/start.java.template
@@ -1,10 +1,29 @@
 package edu.kpi.fbp;
 
+import java.io.File;
+
+import edu.kpi.fbp.params.ParametersStore;
+import edu.kpi.fbp.utils.XmlIo;
+
 public class Start {
 
   public static void main(final String[] args) {
+    final ParametersStore store;
+    if (args != null && args.length > 0) {
+      final File paramsStoreFile = new File(args[0]);
+
+      if (!paramsStoreFile.exists()) {
+        System.err.println("Invalid parameter store file");
+        throw new IllegalArgumentException();
+      }
+
+      store = XmlIo.deserialize(paramsStoreFile, ParametersStore.class);
+    } else {
+      store = null;
+    }
+
     try {
-      new SampleNetwork(null).go();
+      new SampleNetwork(store).go();
     } catch (final Exception e) {
       e.printStackTrace();
     }
