--- a/FBPComponentLib/build.gradle
+++ b/FBPComponentLib/build.gradle
@@ -12,7 +12,8 @@ jar {
 
 repositories {
     mavenCentral()
-    mavenRepo url: "https://raw.github.com/lampapos/FBPRepo/master"
+//    mavenRepo url: "https://raw.github.com/lampapos/FBPRepo/master"
+    mavenRepo url: "file:///windows/docs/prog/diploma/FBPRepo"
 }
 
 dependencies {
