--- a/FBPUtils/build.gradle
+++ b/FBPUtils/build.gradle
@@ -24,8 +24,8 @@ repositories {
 }
 
 dependencies {
-  compile 'edu.kpi.fbp:JavaFBP:1.0'
-  compile 'edu.kpi.fbp:FBPCore:1.0'
+//  compile 'edu.kpi.fbp:JavaFBP:1.0'
+//  compile 'edu.kpi.fbp:FBPCore:1.0'
   compile "org.gradle:gradle-tooling-api:${toolingApiVersion}"
   compile 'org.slf4j:slf4j-simple:1.7.2'
   runtime 'org.slf4j:slf4j-api:1.7.2'
