--- a/FBPUtils/build.gradle
+++ b/FBPUtils/build.gradle
@@ -24,12 +24,22 @@ repositories {
 }
 
 dependencies {
-//  compile 'edu.kpi.fbp:JavaFBP:1.0'
-//  compile 'edu.kpi.fbp:FBPCore:1.0'
+  compile 'edu.kpi.fbp:JavaFBP:1.0'
+  compile 'edu.kpi.fbp:FBPParams:1.0'
+  compile 'com.thoughtworks.xstream:xstream:1.4.2'
   compile "org.gradle:gradle-tooling-api:${toolingApiVersion}"
   compile 'org.slf4j:slf4j-simple:1.7.2'
   runtime 'org.slf4j:slf4j-api:1.7.2'
   testCompile group: 'junit', name: 'junit', version: '4.+'
+}
+
+uploadArchives {
+  repositories {
+    mavenDeployer {
+      repository(url: "file:///windows/docs/prog/diploma/FBPRepo")
+      pom.groupId = 'edu.kpi.fbp'
+    }
+  }
 }
 
 // custom tasks for creating source/javadoc jars
@@ -46,13 +56,4 @@ task javadocJar(type: Jar, dependsOn:javadoc) {
 artifacts {
   archives sourcesJar
   archives javadocJar
-}
-
-uploadArchives {
-  repositories {
-    mavenDeployer {
-      repository(url: "file:///windows/docs/prog/diploma/FBPRepo")
-      pom.groupId = 'edu.kpi.fbp'
-    }
-  }
 }
